# barbican-specs

./: .gitignore  .gitreview  README.md  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
doc/source/: conf.py  index.rst
specs/: template.rst
specs/juno/: add-certificate-to-the-container-type.rst  add-ssl-ca-support.rst  add-wrapping-key-to-barbican-server.rst  api-add-container-registration.rst  api-orders-add-more-types.rst  api-remove-uri-project-id.rst  barbican-enforce-content-type.rst  client-add-containers.rst  client-refactor-models.rst  consume-keystone-events.rst  hp-eskm-plugin.rst  introduce_cliff_to_barbican_client.rst  orders-add-cert-workflow-plugin.rst  restructure-for-plugins.rst  restructure-pkcs11-plugin.rst  template.rst
specs/kilo/: add-creator-only-option.rst  add-per-secret-policy.rst  add-run-as-for-functional-tests.rst  add-worker-retry-update-support.rst  api-change-get-secrets-decrypted.rst  barbican-mkek-model.rst  certificate-order-api.rst  content-type.rst  fix-version-api.rst  identify-cas.rst  placeholder.rst  quota-support-for-barbican-resources.rst  replace-concept-of-tenants-for-projects.rst  snakeoil-ca.rst
specs/liberty/: add-cas.rst  add-crypto-mkek-rotation-support-lightweight.rst  add-transport-cert-ref.rst  api-acl-add-group-list.rst  api-containers-add-put.rst  audit-cadf-events.rst  data-remove-tenant-secret-assoc.rst  expose-ca-enrollment-templates.rst  fix-version-api.rst  quota-support-for-barbican-resources.rst
specs/mitaka/: add-barbican-manage-cmd.rst  add-user-metadata.rst  database-cleanup.rst  (+2 more)
(+7 files in other folders)
