[metadata]
name = barbican-specs
summary = OpenStack Barbican Project Development Specs
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = http://specs.openstack.org/openstack/barbican-specs/
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
